@@ -6,6 +6,7 @@ pts-core: Add helper text when hitting a download with no working mirrors
 pts-core: Various external dependency updates
 pts-core: Add enable-repo sub-command for more easily enabling new OpenBenchmarking.org repos
 pts-core: Result viewer fix for the limit drop down menu potentially not being activated in some cases
+pts-core: Ensure pcntl_signal is present before starting Phoromatic Server
 phodevi: Fix display driver name potentially being reported inaccurate for some obscure graphics cards / driver configurations
 
 Phoronix Test Suite 10.2.1
